--- a/testSF.html
+++ b/testSF.html
@@ -7,6 +7,8 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/css/pref-center-slds.css">
+
   </head>
   <body>
     <main>
@@ -14,4 +16,12 @@
     </main>
 	<script src="index.js"></script>
   </body>
+	
+	<div id="pref-center-main"></div>
+<script id="preference-center" src="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/js/main.js" 
+  pref-center-host="https://solgroup--devpwcgb.sandbox.my.salesforce.com"
+  pref-center-name="consents"
+  pref-center-param="pctoken"></script>
+	
+	
 </html>
