--- a/testSF.html
+++ b/testSF.html
@@ -19,6 +19,11 @@
   pref-center-name="consents"
   pref-center-param="pctoken"></script>
 	
+	  <div id="pref-center-main"></div>
+<script id="preference-center" src="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/js/main.js" 
+  pref-center-host="https://solgroup--devpwcgb.sandbox.my.salesforce.com"
+  pref-center-name="consents"
+  pref-center-param="pctoken"></script>
 	
 	 </body>
 </html>
