--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/css/pref-center-slds.css">
+      <link rel="stylesheet" type="text/css" href="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/css/pref-center-slds.css">
 
   </head>
   <body>
@@ -13,7 +9,7 @@
         <h1>Welcome to My Website UPDATED!!!</h1> 
 	  <h2>ciaone</h2>
 	  <h3>huhuhu</h3>
-	  Questo è nuovo last try
+	  Questo è nuovo last try new
 	  
 	<div id="pref-center-main"></div>
 <script id="preference-center" src="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/js/main.js" 
