--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   </head>
   <body>
  
-        <h1>Welcome to My Website UPDATED!!!</h1> 
-	  <h2>ciaone</h2>
-	  <h3>huhuhu</h3>
-	  Questo è nuovo last try new new
-	  
+        <h1>Welcome to My Website UPDATED!!! NEW NEW</h1> 
+	    
 	<div id="pref-center-main"></div>
 <script id="preference-center" src="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/js/main.js" 
   pref-center-host="https://solgroup--devpwcgb.sandbox.my.salesforce.com"
