--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <body>
  
         <h1>Welcome to My Website UPDATED!!! NEW NEW</h1> 
-	  FUCK
-	    sei nuovo? o nO? si?
+	Nuovo working
 	<div id="pref-center-main"></div>
 <script id="preference-center" src="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/js/main.js" 
   pref-center-host="https://solgroup--devpwcgb.sandbox.my.salesforce.com"
-  pref-center-name="Users Preferences"
+  pref-center-name="Prova_CL"
   pref-center-param="pctoken"></script>
 	  
 	  
