--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	  <div id="pref-center-main"></div>
 <script id="preference-center" src="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/js/main.js" 
   pref-center-host="https://solgroup--devpwcgb.sandbox.my.salesforce.com"
-  pref-center-name="Useagremenet"
+  pref-center-name="Vivisol_Consent_Template"
   pref-center-param="pctoken"></script>
 	  
 	  
