--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   </head>
   <body>
  
-        <h1>Welcome to My Website UPDATED!!! NEW NEW</h1> 
-	  <h1>Benvenuto Caro con errore</h1>
-	
-	  <h1>FINAL FINAL</h1>
+        <h1>Welcome to My Website!!!</h1> 
 	  
 	  <div id="pref-center-main"></div>
 <script id="preference-center" src="https://solgroup--devpwcgb.sandbox.my.salesforce.com/prefcenter/preference-center-1.1.0/js/main.js" 
